<resources>
    <string name="app_name">Planilla</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_usuario_login">Usuario</string>
    <string name="text_contrasena_login">Contraseña</string>
    <string name="hint_usuario_login">Ingrese usuario</string>
    <string name="hint_contrasena_login">Ingrese contraseña</string>
    <string name="switch_recordar_login">Recordar</string>
    <string name="button_ingresar_login">Ingresar</string>
    <string name="TextView_CerrarSesion_User">Cerrar sesión</string>
    <string name="menu_option_inicio">Inicio</string>
    <string name="menu_option_gesBoleta">Gestión boletas</string>
    <string name="menu_option_gesAdelatoSueldo">Adelanto sueldo</string>
    <string name="menu_option_gesVacaciones">Gestión vacaciones</string>
    <string name="menu_option_gesAjusteCuenta">Ajuste de cuenta</string>
    <string name="Text_Noticias">Noticias</string>
    <string name="SwRecordar">Recordar</string>
    <string name="text_cuotas_ver_adelanto_sueldo">Cuotas</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="text_periodo">Periodo</string>
    <string name="text_estado">Estado</string>
    <string name="text_dialog_cuotas">Cuotas</string>
    <string name="text_dailog_mes_solocitud">Mes solicitud</string>
    <string name="text_dialog_ano_solicitud">Año solicitud</string>
    <string name="text_dialog_tipo_adelanto_sueldo">Tipo de adelanto</string>
    <string name="text_dialog_monto">Monto</string>
    <string name="text_dialog_cantidad_cuotas">Cuotas</string>
    <string name="text_dialog_pago_mensual">Pago mensual</string>
    <string name="text_dialog_mes_recepcion">Mes recepcion</string>
    <string name="text_dialog_ano_recepcion">Año recepcion</string>
    <string name="button_solicitar">Solicitar</string>
    <string name="usuario_log">"   Ingrese usuario"</string>
    <string name="contrasena_login">"   Ingrese contraseña"</string>
    >>>>>>> 65402cc97e95e5aeab52ff9866115f20970e3890
</resources>
