<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogoLogin"
        android:layout_width="250dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Partner Tech"
        android:textColor="@color/tres"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoLogin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="321dp"
        android:layout_height="301dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoLogin"
        app:layout_constraintVertical_bias="0.43">

        <Button
            android:id="@+id/buttonIngresarLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/button_ingresar_login"
            android:background="@drawable/buttonlogin"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchRecordar"
            app:layout_constraintVertical_bias="0.777" />

        <EditText
            android:id="@+id/editTextUsuarioLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit"
            android:drawableLeft="@drawable/ic_person_blue"
            android:ems="10"
            android:hint="@string/usuario_log"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:shadowColor="@color/cuatro"
            android:textColorHint="@color/tres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextContrasenaLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit"
            android:drawableLeft="@drawable/ic_lock_blue"
            android:ems="10"
            android:hint="@string/contrasena_login"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorHint="@color/tres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioLogin" />

        <Switch
            android:id="@+id/switchRecordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="216dp"
            android:layout_marginTop="40dp"
            android:checked="true"
            android:text="@string/SwRecordar"
            android:textColor="@color/tres"
            android:theme="@style/SwitchStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextContrasenaLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>